--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+    <title>Poop News</title>
+  </head>
 ﻿<body>
   <header>
     <div class="navContainer">
       <div class="headLogo">
-        <img src="http://clipart-library.com/images/rTnKLAkgc.png" width="25" height="25" /> 
+        <img src="http://clipart-library.com/images/rTnKLAkgc.png" width="25" height="25" />
         <h1 class="headName">Happens</h1>
       </div>
       <div class="centerHeadContainer">
@@ -11,7 +18,7 @@
           <li class="navList"><a class="headLinks">Home</a></li>
           <li class="navList"><a class="headLinks">Changes</a></li>
           <li class="navList"><a class="headLinks">About</a></li>
-          
+
         </ul>
            </div>
        </div>
@@ -21,7 +28,7 @@
        <input type="text" class="userName" placeholder="Username" size="20">
        <input type="text" class="password" placeholder="Password" size="20">
        <input type="submit" value="Submit">
-       </form> 
+       </form>
           </div>
     </div>
     </div>
