--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <title>Poop News</title>
   </head>
-﻿<body>
+<body>
   <header>
     <div class="navContainer">
       <div class="headLogo">
@@ -93,3 +93,4 @@
     <p class="bottomLogo">(c)Copyright poophappens</p>
   </footer>
 </body>
+</html>
